src/objects/ints__Yodlee_User_Credentials__c.object
<CustomObject>
    <fields>
        <fullName>ints__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Yodlee User Credentials</relationshipLabel>
        <relationshipName>Yodlee_User_Credentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ints__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Yodlee User Credentials</relationshipLabel>
        <relationshipName>Yodlee_User_Credentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ints__Password__c</fullName>
        <label>Password(Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Username__c</fullName>
        <label>Username(Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Yodlee_Password__c</fullName>
        <label>Yodlee Password</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Yodlee_Username__c</fullName>
        <label>Yodlee Username</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <label>Yodlee User Credentials</label>
    <nameField>
        <displayFormat>YUC-{00000000}</displayFormat>
        <label>Yodlee User Credentials Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yodlee User Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>